Changelog for CMFFormController

    (name of developer listed in brackets)

CMFFormController 2.0.9 - Released September 30, 2007

    - No longer render the contents of the context (when the context is a
      file) when calculating the state representation.  Fixes
      http://dev.plone.org/plone/ticket/7027
      [zegor]

CMFFormController 2.0.8 - Released April 28, 2007

    - Added optional POST only protection to form validation.
      [alecm]

CMFFormController 2.0.7 - Released January 27, 2006

    - Fixed the combineArgs method of BaseFormAction to decode Unicode values
      in the query string to a defined encoding. You can specify this encoding
      in config.py and it defaults to utf-8.
      [hannosch]

    - Fixed the import of XML files where the context_type/button attributes
      are missing. It's not exported when the value is None, which means any
      button or any content-type.
      [deo]

CMFFormController 2.0.6 - Released November 4, 2006

    - General code cleaned, removed unused imports.
      [hannosch]

    - Converted log functions to use the logging package instead of zLOG.
      [hannosch]

CMFFormController 2.0.5 - Released September 8, 2006

    - Modernized type checking to use isinstance() instead of type() as the
      latter does not recognize derived types. As an example checking for
      UnicodeType or unicode with type() does not recognize Zope3 Messages,
      which are derived from unicode. Usually for checking for stringish types
      you want to do isinstance(foo, basestring) nowadays. This fixes
      http://dev.plone.org/plone/ticket/5741.
      [hannosch]

    - Fixed some deprecation warnings for CompilerError.
      [hannosch]

    - Cleaned up test infrastructure, removed custom testrunner.
      [hannosch]

CMFFormController 2.0.4 - Released June 17, 2006

    - Fix issue with usage of relative urls for action traversal, rather than
      actual physical paths, which are necessary.
      [alecm]
