@@ -1,5 +1,5 @@
 import os
-from Acquisition import aq_base
+from Acquisition import aq_base, aq_inner
 from Globals import InitializeClass
 from zExceptions import Forbidden
 from AccessControl import ClassSecurityInfo
@@ -198,20 +198,19 @@ class ControllerBase:
         return self.require_post
 
     def getNext(self, controller_state, REQUEST):
-        __traceback_info__ = str(controller_state).split('\n')
-        
         id = self.getId()
         status = controller_state.getStatus()
         context = controller_state.getContext()
+        context_base = aq_base(context)
 
-        context_type = getattr(context, 'portal_type', None)
+        context_type = getattr(context_base, 'portal_type', None)
         if context_type is None:
-            context_type = getattr(context, '__class__', None)
+            context_type = getattr(context_base, '__class__', None)
             if context_type:
                 context_type = getattr(context_type, '__name__', None)
 
         button = controller_state.getButton()
-        controller = getToolByName(self, 'portal_form_controller')
+        controller = getToolByName(aq_inner(self), 'portal_form_controller')
 
         next_action = None
         try:
@@ -220,7 +219,7 @@ class ControllerBase:
             pass
         if next_action is None:
             try:
-                if hasattr(aq_base(context), 'formcontroller_actions'):
+                if getattr(context_base, 'formcontroller_actions', None) is not None:
                     next_action = context.formcontroller_actions.match(id, status, context_type, button)
             except ValueError:
                 pass
@@ -265,7 +264,6 @@ class ControllerBase:
 
 
     def getValidators(self, controller_state, REQUEST):
-        __traceback_info__ = str(controller_state).split('\n')
         if REQUEST.get('REQUEST_METHOD', 'GET') == 'GET':
             form_id = getattr(self, 'id', 'Unknown')
             if not self.require_post:
